# friend-tech-monitor

./: .env  .env.example  .gitignore  Cargo.toml  README.md  bruh-tech-abi.json  friend-tech-abi.json  monitor.json  monitor.json.example
.github/workflows/: build-on-merge.yml  release.yml
src/: main.rs
src/auth/: mod.rs
src/auth/sms/: auth_impl.rs  mod.rs  types.rs
src/discord_utils/: mod.rs  types.rs  webhook_utils.rs
src/ethereum/: commons.rs  config.rs  contract.rs  mod.rs  sniper.rs  wallet.rs
src/io_utils/: cli_utils.rs  json_loader.rs  mod.rs  types.rs
src/kosetto_api/: kosetto_client.rs  mod.rs  types.rs
src/monitor/: mod.rs  monitor.rs
src/monitor_v2/: mod.rs  monitor_v2.rs
src/rabbitmq/: init_broker.rs  mod.rs
src/sniper/: mod.rs  sniper.rs  sniper_contract.rs  sniper_contract_logic.rs
