[package]
name = "friend-tech-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
reqwest = {version = "0.11.18", features = ["json"]}
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }
ethers = "2.0.8"
simple_logger = { version = "4.2.0", features = ["colors"] }
log = "0.4.20"
text_io = "0.1.12"
